# soda

./: .gitignore  Cargo.toml  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
src/: ctx.rs  main.rs  pass.rs
src/elf/: mod.rs
src/elf/pass/: copy_sections.rs  init_array.rs  loader.rs  mod.rs  reloc.rs  relocate.rs  section.rs  symbol.rs
src/elf/test/: libspdlog.so.1.12.0  mod.rs
src/utils/: stringify.rs
