[package]
name = "soda"
authors = ["Sirui Mu <msrlancern@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
object = { version = "0.32.1", features = ["read_core", "write_std", "elf"] }
simple_logger = "4.3.0"
structopt = "0.3.26"
